--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,4 +1,6 @@
 [default]
-DEBUG = True
-AUTOMATEDLOGPARSING=/home/zds/microservices-unit-tests
+debug = True
+automatedlogparsing = /home/cle-test/microservices-unit-tests
+test_log_path = /home/cle-test/AUTO/2019-05-29/test_log/httpd/2019-05-29-22:12:53.logs
+status_log_path = /home/cle-test/AUTO/2019-05-29/status_log/2019-05-29-22:12:17.logs
 
